# bio-rust-example

./: Cargo.toml  README.md
examples/: test.fa
src/: main.rs
