[package]
name = "fasta-search"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
description = "Fasta file uploader with sequence search"
keywords = ["rust-bio", "actix-web", "multipart", "index", "fasta"]
repository = "https://github.com/bevanhunt/actix-web-upload-example"
readme = "README.md"

[dependencies]
futures = "0.3.1"
actix-multipart = "0.2.0-alpha.3"
actix-web = "2.0.0-alpha.3"
actix-rt = "1.0.0-alpha.3"
bio = "0.30.0"
